# compchem_gastown

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: conf.py  index.rst
qmlforge/: __init__.py
qmlforge/cli/: __init__.py  main.py
qmlforge/data/: __init__.py  dataset.py
qmlforge/qm/: __init__.py  runner.py
