[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmlforge"
version = "0.1.0"
description = "QMLForge - A GPU-Optimized Quantum Machine Learning Framework for Computational Chemistry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QMLForge Team", email = "team@qmlforge.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "e3nn>=0.5.0",
    "pyscf>=2.4.0",
    "rdkit>=2023.03.1",
    "ase>=3.22.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "optuna>=3.2.0",
    "pymbar>=4.0.0",
    "dvc>=3.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "pydantic>=2.4.0",
    "beartype>=0.16.0",
]

[project.optional-dependencies]
gpu = ["gpu4pyscf>=0.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
ui = ["gradio>=3.50.0", "nglview>=3.0.0", "jupyter>=1.0.0"]
all = [
    "qmlforge[gpu,dev,ui]",
]

[project.scripts]
qmlforge = "qmlforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/qmlforge/qmlforge"
Documentation = "https://qmlforge.readthedocs.io"
Repository = "https://github.com/qmlforge/qmlforge"
Issues = "https://github.com/qmlforge/qmlforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["qmlforge*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "E501",  # Line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
    "--cov=qmlforge",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "qm: marks tests that run quantum chemistry calculations",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["qmlforge"]
omit = [
    "*/tests/*",
    "*/test_*",
    "qmlforge/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
